tests/expectations/compiler/tuple/type_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `u64` but type `bool` was found
    --> compiler-test:5:34
     |
   5 |         let t: (bool, u64) = (a, b); // We should expect a bool, not a u64.
     |                                  ^
Error [ETYC0372003]: Expected type `bool` but type `u64` was found
    --> compiler-test:7:24
     |
   7 |         return (t.0, t.1);
     |                        ^
"""]
